@@ -1,6 +1,16 @@
 2018-10-12  Jonathan Wakely  <jwakely@redhat.com>
 
 	Backport from mainline
+	2018-08-30  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/ext/pointer.h (_Pointer_adapter): Define operators for
+	pointer arithmetic using long long offsets.
+	* testsuite/ext/ext_pointer/1.cc: Test pointer arithmetic using
+	long long values.
+
+2018-10-12  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backport from mainline
 	2018-08-22  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/87061
